--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,80 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+html, body{
+    position: relative;
+    width: 100%;
+    /* display: flex;
+    flex-grow: 1; */
+    max-height: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.567);
+    /* background-image: url('/JRLogo.png');
+    background-position: center;
+    background-size: contain;
+    background-attachment: fixed;
+    background-repeat: no-repeat; */
+    
+    /* background-color: black; */
+}
+html{
+    overflow-x: hidden;
+}
+body{
+    overflow: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+input[type="range" i]{
+    -webkit-appearance: none;
+    display: flex;
+    background: rgba(255, 255, 255, 0.201);
+    cursor: pointer;
+    width: 100%;
+    min-width: 100%;
+    align-self: center;
+    background-image: linear-gradient(rgb(0, 213, 255), rgb(0, 213, 255));
+    background-size: 70% 100%;
+    background-repeat: no-repeat;
+}
+input[type="range"]:focus {
+    outline: none;
   }
+input[type="range" i]::-webkit-slider-runnable-track{
+    -webkit-appearance: none;
+    /* background: rgb(255, 255, 255); */
+    box-shadow: inset 0 0 4px 0 rgb(83, 94, 116);
+    height: 5px;
+    border-radius: 1px;
+    min-width: 50%;
+    outline: 1px solid rgb(42, 42, 42);
+}
+input[type="range" i]::-moz-range-track{
+    -webkit-appearance: none;
+    /* background: rgb(208, 224, 248); */
+    height: 5px;
+    
+}
+input[type="range" i]::-ms-track{
+    -webkit-appearance: none;
+    background: rgb(31, 33, 36);
+    height: 5px;
+}
+input[type="range" i]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    /* height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px 0 rgb(83, 94, 116);
+    box-shadow: inset 0 0 5px 0 rgb(83, 94, 116);
+    align-self: flex-start;
+    margin-top: -7.5px;
+    background-color: rgb(255, 255, 255); */
+}
+input[type="range" i]::-moz-range-thumb{
+    -webkit-appearance: none;
+    background-color: rgb(161, 168, 178);
+}
+input[type="range" i]::-ms-thumb{
+    -webkit-appearance: none;
+    background-color: rgb(161, 168, 178);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
