updating styling, removed next.config file from index because of env variables

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@ html, body{
     padding: 0;
     margin: 0;
     background-color: rgba(0, 0, 0, 0.567);
+    background-color: #0f0f0f;
     /* background-image: url('/JRLogo.png');
     background-position: center;
     background-size: contain;
