--- a/src/components/Carosel.module.css
+++ b/src/components/Carosel.module.css
@@ -34,7 +34,7 @@
     width: 100%;
     max-height: 300px;
     margin-top: 0em;
-    background: linear-gradient(to right, rgb(0, 0, 0) 25%, rgba(0, 0, 0, 0.192), rgb(0, 0, 0) 75%);
+    background: radial-gradient(circle, #1b1b1b, #0f0f0f);
 }
 .container{
     display: flex;
