--- a/src/components/DynamicHeader.module.css
+++ b/src/components/DynamicHeader.module.css
@@ -36,7 +36,7 @@ z-index: 100;
     left: 0;
     /* background-color: rgb(12, 28, 52); */
     /* background: rgb(64, 73, 87) */
-    background-image: linear-gradient(to bottom right, black, 85%,transparent);
+    background-image: linear-gradient(to bottom right, #0f0f0f, 85%,transparent);
 
     
     z-index: -1;
