--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -22,7 +22,7 @@
     left: 0;
     height: 20%;
     width: 100%;
-    background-image: linear-gradient(to top, rgb(0, 0, 0) 10%, transparent 90%);
+    background-image: linear-gradient(to top, #0f0f0f 10%, transparent 90%);
     background-repeat: no-repeat;
     /* background-color: black; */
     z-index: 10;
@@ -80,7 +80,7 @@
     top: 0;
     left: 0;
     z-index: 2;
-    background: linear-gradient(to right, rgb(0, 0, 0) 25%, rgba(0, 0, 0, 0.192), rgb(0, 0, 0) 75%);
+    background: linear-gradient(to right, #0f0f0f 25%, #0f0f0f1a, #0f0f0f 75%);
 }
 
 .heroImage{
