--- a/src/components/SongPlayerBar.module.css
+++ b/src/components/SongPlayerBar.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 70px;
     z-index: 1000;
-    background-color: rgb(0, 0, 0);
+    background-color: #0f0f0f;
 }
 /* .infoContainer{
     display: flex;
