--- a/src/components/HeroTrack.module.css
+++ b/src/components/HeroTrack.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     position: absolute;
     bottom: 50px;
-    left: 0;
+    left: 75px;
     padding: 0 0 0 5rem;
     z-index: 11;
 }
