--- a/src/components/SongPlayerBar.module.css
+++ b/src/components/SongPlayerBar.module.css
@@ -6,7 +6,8 @@
     width: 100%;
     height: 70px;
     z-index: 1000;
-    background-color: #0f0f0f;
+    background-color: var(--themeColorDark);
+    background: linear-gradient(to top, var(--themeColorDark) 20%, var(--themeColorLight));
 }
 /* .infoContainer{
     display: flex;
