--- a/src/components/Carosel.module.css
+++ b/src/components/Carosel.module.css
@@ -17,7 +17,7 @@
 
 .imageContainer{
     position: relative;
-    
+
     height: 200px;
     min-height: 200px;
     cursor: pointer;
@@ -108,7 +108,7 @@
 
 .insetShadow{
     position: absolute;
-    box-shadow: inset 0 0 20px 0 rgb(91, 110, 146);
+    box-shadow: inset 0 0 20px 0 var(--accentBlue);
     height: 100%;
     min-width: 100%;
     background: transparent;
