--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -1,19 +1,23 @@
 .container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 75px;
     position: fixed;
     left: 0;
-    top: 84px;
+    top: 82px;
     height: 100%;
+    /* padding: 5px; */
     /* box-shadow: 0 0 10px 0 var(--themeColorLight); */
 
     z-index: 10000;
 }
 .sideBar{
     position: relative;
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
     z-index: 100;
 }
 .background{
@@ -25,8 +29,56 @@
     /* background-color: rgb(12, 28, 52); */
     /* background: rgb(64, 73, 87) */
     /* background-image: linear-gradient(to top, var(--themeColorLight) 90%, var(--themeColorDark), 100%,transparent); */
-    background-color: var(--themeColorLight);
+    background-image: linear-gradient(to bottom right, var(--themeColorDark) 40%, var(--themeColorLight) 100%);
+
+    /* background-color: var(--themeColorLight); */
 
     
     z-index: -1;
+}
+.iconContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    /* min-height: calc(100% - 70px); */
+    min-width: 75px;
+    width: 75px;
+}
+.textContainer{
+    position: absolute;
+    left: 75px;
+    top: 0;
+    height: 100%;
+    /* min-height: calc(100% - 70px); */
+    width: 225px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: white;
+}
+.history{
+    height: 50px;
+    width: 50px;
+    max-height: 50px;
+    max-width: 50px;
+    display: block;
+    background-image: url('/song-history.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.historyText{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 0 0 30px;
+    margin: 0;
+    height: 50px;
+    width: 100%;
+    font-size: 20px;
+    cursor: pointer;
 }
