--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -7,7 +7,7 @@
     top: 82px;
     height: 100%;
     /* padding: 5px; */
-    /* box-shadow: 0 0 10px 0 var(--themeColorLight); */
+    /* box-shadow: 8px 10px 5px -5px var(--themeColorLight); */
 
     z-index: 10000;
 }
@@ -42,31 +42,25 @@
     justify-content: flex-start;
     align-items: center;
     height: 100%;
+    width: 100%;
     /* min-height: calc(100% - 70px); */
-    min-width: 75px;
-    width: 75px;
+    min-width: 300px;
+    gap: 2;
 }
-.textContainer{
-    position: absolute;
-    left: 75px;
-    top: 0;
-    height: 100%;
-    /* min-height: calc(100% - 70px); */
-    width: 225px;
+.itemWrapper{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    width: 100%;
     color: white;
+    margin-top: 1em;
 }
 .icon{
-    margin-top: 32px;
-    height: 50px;
-    width: 50px;
+    margin-left: 1.25em;
+    height: 40px;
+    width: 40px;
     max-height: 50px;
     max-width: 50px;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     cursor: pointer;
 }
 .iconImage{
@@ -77,11 +71,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 0 0 15px;
-    margin-top: 32px;
+    /* text-align: center; */
+    padding: 0 0.75em 0 0.75em;
     height: 50px;
+    border-radius: 5px;
     /* padding-top: 5px; */
-    width: 100%;
-    font-size: 20px;
+    margin-left: 1em;
+    width: 60%;
+    font-size: 18px;
     cursor: pointer;
+}
+.text:hover{
+    background-color: rgb(34, 34, 34);
 }
