--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -49,24 +49,40 @@
 }
 .itemWrapper{
     display: flex;
-    width: 100%;
+    width: 95%;
+    min-width: 95%;
     color: white;
     margin-top: 1em;
+    border-radius: 5px;
+    overflow-x: hidden;
+    cursor: pointer;
 }
 .icon{
-    margin-left: 1.25em;
+    margin-left: 6px;
     height: 50px;
-    width: 40px;
+    width: 50px;
     max-height: 50px;
     max-width: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
     object-fit: contain;
-    cursor: pointer;
+    border-radius: 50%;
+
+    transition: 0.2s ease-in-out;
+}
+.seperator{
+    display: block;
+    width: 1px;
+    height: 80%;
+    align-self: center;
+    background-color: rgba(255, 255, 255, 0.294);
+    margin-left: 1em;
 }
 .iconImage{
     height: 80%;
-    width: 100%;
+    width: 80%;
+    filter: contrast(0) brightness(300%);
 }
 .text{
     display: flex;
@@ -77,11 +93,10 @@
     height: 50px;
     border-radius: 5px;
     /* padding-top: 5px; */
-    margin-left: 1em;
+    
     width: 60%;
     font-size: 18px;
-    cursor: pointer;
 }
-.text:hover{
+.text:hover,.itemWrapper:hover{
     background-color: rgb(34, 34, 34);
 }
