--- a/src/components/SongTimer.module.css
+++ b/src/components/SongTimer.module.css
@@ -44,26 +44,48 @@
     align-items: center;
     min-width: 150px;
 }
-.play,.previous,.next{
+.play,.previous,.next,.pause{
     background: var(--themeColorLight);
     border-radius: 50%;
-    box-shadow: 0 0 5px 0 rgba(56, 56, 56, 0.835);
-    box-shadow: inset 0 0 10px 0 rgba(56, 56, 56, 0.835);
+    box-shadow: 0 0 5px 0 rgb(0, 0, 0);
+    /* box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.835); */
     image-rendering: crisp-edges;
+    border: 1px solid rgba(255, 255, 255, 0.113);
     padding: 3px;
     cursor: pointer;
 
-    transition: all 0.1s ease;
+    transition: all 0.1s;
 }
-.play:hover,.previous:hover,.next:hover{
-    background-color: rgb(74, 74, 74);
-    box-shadow: 0 0 20px 0 rgba(182, 182, 182, 0.835);;
+.play:hover,.previous:hover,.next:hover,.pause:hover{
+    background-color: rgb(66, 66, 66);
 }
-.play{
+.play,.pause{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     height: 40px;
     width: 40px;
-    padding-left: 6px;
+    /* padding-left: 6px; */
+}
+.playImage{
+    background-image: url('/playWhite.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 2px 0px;
+    height: 100%;
+    width: 100%;
+    image-rendering: crisp-edges;
+}
+.pauseImage{
+    background-image: url('/pauseWhiteSmall.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0px 0px;
+    margin: 0;
+    height: 60%;
+    width: 60%;
 }
 .previous,.next{
     padding: 6px;
