Added color changing feature for which song is currently playing, moved ColorSchemer code to util file, added state to access animation interval

--- a/src/components/Carosel.module.css
+++ b/src/components/Carosel.module.css
@@ -34,7 +34,7 @@
     width: 100%;
     max-height: 300px;
     margin-top: 0em;
-    background: radial-gradient(circle, var(--themeColorLight), var(--themeColorDark));
+    background: radial-gradient(circle, transparent, var(--themeColorDark)80%);
 }
 .container{
     display: flex;
