--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -41,10 +41,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    height: fit-content;
     width: 100%;
     /* min-height: calc(100% - 70px); */
     min-width: 300px;
+    overflow-y: scroll;
     gap: 2;
 }
 .itemWrapper{
