--- a/src/components/HistoryWindow.module.css
+++ b/src/components/HistoryWindow.module.css
@@ -28,12 +28,19 @@
     max-height: 650px; */
     color: white;
     overflow-y: scroll;
+    overflow-x: hidden;
     margin-top: 1em;
 }
 .songContainer{
     display: flex;
     /* justify-content: space-between; */
     align-items: center;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 260px;
+}
+.songContainer:hover{
+    background-color: var(--themeColorLight);
 }
 .imageContainer{
     display: block;
@@ -41,6 +48,8 @@
     min-width: 60px;
     height: 60px;
     object-fit: cover;
+    border-radius: 5px;
+    overflow: hidden;
 }
 .image{
     height: 100%;
@@ -49,21 +58,25 @@
 .infoContainer{
     display: flex;
     margin-left: 20px;
-    max-width: 150px;
+    flex-grow: 1;
+    max-width: 90%;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
 }
 .songName,.songArtist{
+    max-width: 80%;
+    width: 80%;
     margin: 0;
-    word-wrap: break-word;
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 .songName{
     font-size: 18px;
-    max-height: 100%;
-    overflow: hidden;
+    max-height: 20px;
 }
 .songArtist{
+    margin-top: 5px;
     font-size: 14px;
 }
