--- a/src/components/Carosel.module.css
+++ b/src/components/Carosel.module.css
@@ -73,7 +73,7 @@
     display: flex;
     flex-direction: column;
     padding: 1em;
-    background: rgb(0, 0, 0);
+    background: var(--themeColorDark);
 }
 .bottomInfo h2, .bottomInfo h3, .bottomInfo p{
     margin: 0.25em;
