resided pause button in history window, moved titles from images to buttons

--- a/src/components/HistoryWindow.module.css
+++ b/src/components/HistoryWindow.module.css
@@ -86,6 +86,10 @@
 .playImage{
     padding-left: 5px;
 }
+.pauseImage{
+    height: 50%;
+    width: 50%;
+}
 .playImage,.pauseImage,.heartImage{
     pointer-events: none;
 }
